# openapi/v1.json
@@ -3256,14 +3256,6 @@
             }
           },
           {
-            "name": "slotIndex",
-            "in": "query",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          {
             "name": "Idempotency-Key",
             "in": "header",
             "description": "\u0423\u043D\u0456\u043A\u0430\u043B\u044C\u043D\u0438\u0439 \u043A\u043B\u044E\u0447 \u043E\u043F\u0435\u0440\u0430\u0446\u0456\u0457 \u2014 \u0437\u0430\u0445\u0438\u0441\u0442 \u0432\u0456\u0434 \u043F\u043E\u0434\u0432\u0456\u0439\u043D\u043E\u0433\u043E \u0432\u0438\u043A\u043E\u043D\u0430\u043D\u043D\u044F \u043F\u0440\u0438 \u0440\u0435\u0442\u0440\u0430\u044F\u0445",
@@ -5906,6 +5898,22 @@
         },
         "additionalProperties": false
       },
+      "CatalogArtifactSlot": {
+        "required": [
+          "displayName",
+          "key"
+        ],
+        "type": "object",
+        "properties": {
+          "key": {
+            "type": "string"
+          },
+          "displayName": {
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
+      },
       "CatalogBuilding": {
         "required": [
           "displayName",
@@ -6046,6 +6054,10 @@
             }
           },
           "setKey": {
+            "type": "string",
+            "nullable": true
+          },
+          "artifactSlot": {
             "type": "string",
             "nullable": true
           },
@@ -6215,8 +6227,10 @@
             "format": "int32"
           },
           "artifactSlots": {
-            "type": "integer",
-            "format": "int32"
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CatalogArtifactSlot"
+            }
           },
           "maxEnhancement": {
             "type": "integer",
